# pluca-memcached

./: .gitignore  CHANGELOG.md  README.md  docker-compose.yaml  pyproject.toml
src/pluca_memcached/: __init__.py  adapter.py
tests/: test_adapter.py  test_standard_adapter.py
